# TestWasm

./: CMakeLists.txt  appTestWasm.html  appTestWasm.js  main.cpp  main.qml
.github/workflows/: testCI.yml
